# regtidy

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
src/: cli.rs  error.rs  main.rs  models.rs  output.rs  registry.rs  strategy.rs
