[package]
name = "regtidy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool to clean up unused Docker images from private Registry V2 instances"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
colored = "2"
